# ABQnn

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  UMAT_allmodels.for
cmake/: FindLibTorch.cmake  config.h.in
fortran/: UMAT_base.for  UMAT_base.for.in  VUMAT_base.for
include/: abqnn_ipc_common.h  abqnn_ipc_protocol.h  umat_auxlib.h  umat_pt_caller.h
models/: test_NH_3D.pt  test_NH_PE.pt
src/: ABQnn_inference_server.cpp  CMakeLists.txt  UMAT_auxlib.cpp  UMAT_pt_caller.cpp  abqnn_ipc_common.cpp
tests/: CMakeLists.txt  UMAT_fortest.f90  VUMAT_fortest.f90  load_test.cpp  pt_caller_concurrency_test.cpp  pt_caller_test.cpp  start_ipc_server.ps1  stop_ipc_server.ps1
utils/: export_models.py  gen_material_models.py  gen_test_ts_models.py
